fix cursor z-index

--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -146,6 +146,8 @@
   pointer-events: none;
   transition: width 0.3s ease;
 
+  z-index: 2;
+
   &.active-cursor {
     width: 3rem;
     border: 1px solid var(--clr-gray);
